--- a/index.html
+++ b/index.html
@@ -14,196 +14,156 @@
 </head>
 
 <body>
-    <h6 class="abtopheader">Donate/Support <small class="abtoplink">- <a href="https://aminbeheshti.com/"
-                class="alert-link">AminBeheshti.com</a></small></h6>
-    <div class="modal modal-sheet position-static d-block bg-secondary" tabindex="-1" role="dialog" id="modalSheet">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content rounded-6 shadow mx-auto">
+    <div class="header">
+        <h1>Support <a href="https://aminbeheshti.com/">AminBeheshti.com</a></h1>
+    </div>
+    <div class="container">
+        <div class="alert-custom" role="alert">
+            🌟 Thank you for being an essential part of my journey! Your support allows me to keep the app
+            ad-free and continuously improving. If you resonate with my mission, consider making a crypto
+            donation. Every contribution fuels my passion and innovation. 🙏 I deeply appreciate your generosity!
+        </div>
+        <div class="row">
 
-                <p class="modal-body py-2">
-                    <small>🚀 Thank you for being part of my app's journey!</small><br />
-                    <small>🎉 I pour my heart and soul into every update and
-                        feature.</small><br />
-                    <small>
-                        💰 If you believe in my vision and want to help keep the app ad-free and awesome, consider
-                        making a
-                        crypto donation today. </small><br />
-                    <small>🧡 Your support fuels my passion and keeps the app
-                        innovative.</small><br />
-                    <small>💸 You can copy my wallet address from the list below to donate and show your love for
-                        the
-                        app. </small><br />
-                    <small>🙏 Your contribution means the world to me, and to the entire community who benefits from
-                        the
-                        app.</small>
-                </p>
-            </div>
-
-            <div class="modal-content rounded-6 shadow">
-                <div class="modal-header border-bottom-0">
-                    <h5 class="modal-title">
-                        <img src="https://cdn.jsdelivr.net/gh/atomiclabs/cryptocurrency-icons@d5c68edec1f5eaec59ac77ff2b48144679cebca1/svg/icon/btc.svg"
-                            alt="btc" />
-                        Bitcoin <span class="text-muted">BTC</span>
-                    </h5>
-                </div>
-                <div class="modal-body py-0">
-                    <p id="bitcoin">bc1qmx7qjqywzmcqrxzwkfjj2u7d4dvpusmjtrh56m</p>
-                    <button type="button" class="btn btn-sm btn-primary w-100 mx-0 mb-2"
-                        onclick="copyToClipboard('bitcoin')">
-                        Click to Copy Address
-                    </button>
-                </div>
-            </div>
-            <div class="modal-content rounded-6 shadow">
-                <div class="modal-header border-bottom-0">
-                    <h5 class="modal-title">
-                        <img src="https://cdn.jsdelivr.net/gh/atomiclabs/cryptocurrency-icons@d5c68edec1f5eaec59ac77ff2b48144679cebca1/svg/icon/trx.svg"
-                            alt="trx" />
-                        TRON <span class="text-muted">TRX</span>
-                    </h5>
-                </div>
-                <div class="modal-body py-0">
-                    <p id="tron">TLD8auaK2hV9B1VJJrCsdS77Fbx2bapavh</p>
-                    <button type="button" class="btn btn-sm btn-primary w-100 mx-0 mb-2"
-                        onclick="copyToClipboard('tron')">
-                        Click to Copy Address
-                    </button>
+            <!-- Bitcoin Card -->
+            <div class="col-md-6">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            <img src="https://cryptologos.cc/logos/bitcoin-btc-logo.svg?v=014" alt="Bitcoin Logo" />
+                            Bitcoin <span class="text-muted">BTC</span>
+                        </h5>
+                        <p class="card-text" id="bitcoin">bc1qg9jpeju99lydxh29069lvg7wpsajq5hkyqmpyt</p>
+                        <div class="qr-code">
+                            <img src="bitcoin-qr.jpg" alt="Bitcoin QR Code" width="128" height="128" />
+                        </div>
+                        <button class="btn btn-primary btn-sm copy-btn mt-3 d-block mx-auto"
+                            onclick="copyToClipboard('bitcoin')" aria-label="Copy Bitcoin Address">
+                            <i class="bi bi-clipboard"></i> Copy Address
+                        </button>
+                    </div>
                 </div>
             </div>
 
-            <div class="modal-content rounded-6 shadow">
-                <div class="modal-header border-bottom-0">
-                    <h5 class="modal-title">
-                        <img src="https://cdn.jsdelivr.net/gh/atomiclabs/cryptocurrency-icons@d5c68edec1f5eaec59ac77ff2b48144679cebca1/svg/icon/eth.svg"
-                            alt="eth" />
-                        Ethereum <span class="text-muted">ETH</span>
-                    </h5>
-                </div>
-                <div class="modal-body py-0">
-                    <p id="eth">0x3a414eb23be9acbc3541ff9618873f1a5df309ee</p>
-                    <button type="button" class="btn btn-sm btn-primary w-100 mx-0 mb-2"
-                        onclick="copyToClipboard('eth')">
-                        Click to Copy Address
-                    </button>
-                </div>
-            </div>
-            <div class="modal-content rounded-6 shadow">
-                <div class="modal-header border-bottom-0">
-                    <h5 class="modal-title">
-                        <img src="https://cdn.jsdelivr.net/gh/atomiclabs/cryptocurrency-icons@d5c68edec1f5eaec59ac77ff2b48144679cebca1/svg/icon/doge.svg"
-                            alt="doge" />
-                        Dogecoin <span class="text-muted">DOGE</span>
-                    </h5>
-                </div>
-                <div class="modal-body py-0">
-                    <p id="doge">DEeHkZqwFNh5dxoYdsDLpVkErSMhZJuU4b</p>
-                    <button type="button" class="btn btn-sm btn-primary w-100 mx-0 mb-2"
-                        onclick="copyToClipboard('doge')">
-                        Click to Copy Address
-                    </button>
+            <!-- TRON Card -->
+            <div class="col-md-6">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            <img src="https://cryptologos.cc/logos/tron-trx-logo.svg?v=014" alt="TRON Logo" />
+                            TRON <span class="text-muted">TRX</span>
+                        </h5>
+                        <p class="card-text" id="tron">TKunE2XMK62xX3GXR7ZNbhiHriY7YFMJHV</p>
+                        <div class="qr-code">
+                            <img src="tron-qr.jpg" alt="TRON QR Code" width="128" height="128" />
+                        </div>
+                        <button class="btn btn-primary btn-sm copy-btn mt-3 d-block mx-auto"
+                            onclick="copyToClipboard('tron')" aria-label="Copy TRON Address">
+                            <i class="bi bi-clipboard"></i> Copy Address
+                        </button>
+                    </div>
                 </div>
             </div>
-            <div class="modal-content rounded-6 shadow">
-                <div class="modal-header border-bottom-0">
-                    <h5 class="modal-title">
-                        <img src="https://cdn.jsdelivr.net/gh/atomiclabs/cryptocurrency-icons@d5c68edec1f5eaec59ac77ff2b48144679cebca1/svg/icon/usdt.svg"
-                            alt="usdt" />
-                        Tether <span class="text-muted">USDT</span>
-                    </h5>
-                </div>
-                <div class="modal-body py-0">
-                    <p id="usdt">TLD8auaK2hV9B1VJJrCsdS77Fbx2bapavh</p>
-                    <button type="button" class="btn btn-sm btn-primary w-100 mx-0 mb-2"
-                        onclick="copyToClipboard('usdt')">
-                        Click to Copy Address
-                    </button>
-                </div>
-            </div>
-            <div class="modal-content rounded-6 shadow">
-                <div class="modal-header border-bottom-0">
-                    <h5 class="modal-title">
-                        <img src="https://cdn.jsdelivr.net/gh/atomiclabs/cryptocurrency-icons@d5c68edec1f5eaec59ac77ff2b48144679cebca1/svg/icon/bnb.svg"
-                            alt="bnb" />
-                        Binance Coin <span class="text-muted">BNB</span>
-                    </h5>
-                </div>
-                <div class="modal-body py-0">
-                    <p id="bnb">bnb18ajcdmv3c6w08sk8ayv75ks87y2w4hghntcxvd</p>
-                    <strong>Memo:</strong> 1497659311
-                    <button type="button" class="btn btn-sm btn-primary w-100 mx-0 mb-2"
-                        onclick="copyToClipboard('bnb')">
-                        Click to Copy Address
-                    </button>
+
+            <!-- Ethereum Card -->
+            <div class="col-md-6">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            <img src="https://cryptologos.cc/logos/ethereum-eth-logo.svg?v=014" alt="Ethereum Logo" />
+                            Ethereum <span class="text-muted">ETH</span>
+                        </h5>
+                        <p class="card-text" id="eth">0x686cAcdFBfd698Ff2c9501ed89418Ab9D49FFD17</p>
+                        <div class="qr-code">
+                            <img src="ethereum-qr.jpg" alt="Ethereum QR Code" width="128" height="128" />
+                        </div>
+                        <button class="btn btn-primary btn-sm copy-btn mt-3 d-block mx-auto"
+                            onclick="copyToClipboard('eth')" aria-label="Copy Ethereum Address">
+                            <i class="bi bi-clipboard"></i> Copy Address
+                        </button>
+                    </div>
                 </div>
             </div>
-            <div class="modal-content rounded-6 shadow">
-                <div class="modal-header border-bottom-0">
-                    <h5 class="modal-title">
-                        <img src="https://cdn.jsdelivr.net/gh/atomiclabs/cryptocurrency-icons@d5c68edec1f5eaec59ac77ff2b48144679cebca1/svg/icon/bch.svg"
-                            alt="bch" />
-                        Bitcoin Cash <span class="text-muted">BCH</span>
-                    </h5>
-                </div>
-                <div class="modal-body py-0">
-                    <p id="bch">15roD7rpYmT7djmpsKNDDHRrGgoQPNSBY7</p>
-                    <button type="button" class="btn btn-sm btn-primary w-100 mx-0 mb-2"
-                        onclick="copyToClipboard('bch')">
-                        Click to Copy Address
-                    </button>
-                </div>
-            </div>
-            <div class="modal-content rounded-6 shadow">
-                <div class="modal-header border-bottom-0">
-                    <h5 class="modal-title">
-                        <img src="https://cdn.jsdelivr.net/gh/atomiclabs/cryptocurrency-icons@d5c68edec1f5eaec59ac77ff2b48144679cebca1/svg/icon/ltc.svg"
-                            alt="ltc" />
-                        Litecoin <span class="text-muted">LTC</span>
-                    </h5>
-                </div>
-                <div class="modal-body py-0">
-                    <p id="ltc">LS3EdgPiDh51uEDWovfVgCk9wXZYYa5vDt</p>
-                    <button type="button" class="btn btn-sm btn-primary w-100 mx-0 mb-2"
-                        onclick="copyToClipboard('ltc')">
-                        Click to Copy Address
-                    </button>
+
+            <!-- Dogecoin Card -->
+            <div class="col-md-6">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            <img src="https://cryptologos.cc/logos/dogecoin-doge-logo.svg?v=014" alt="Dogecoin Logo" />
+                            Dogecoin <span class="text-muted">DOGE</span>
+                        </h5>
+                        <p class="card-text" id="doge">DAVHGhvzyaHhaCDbWZZjEZgKZLFnEw6wf4</p>
+                        <div class="qr-code">
+                            <img src="dogecoin-qr.jpg" alt="Dogecoin QR Code" width="128" height="128" />
+                        </div>
+                        <button class="btn btn-primary btn-sm copy-btn mt-3 d-block mx-auto"
+                            onclick="copyToClipboard('doge')" aria-label="Copy Dogecoin Address">
+                            <i class="bi bi-clipboard"></i> Copy Address
+                        </button>
+                    </div>
                 </div>
             </div>
-            <div class="modal-content rounded-6 shadow">
-                <div class="modal-header border-bottom-0">
-                    <h5 class="modal-title">
-                        <img src="https://cdn.jsdelivr.net/gh/atomiclabs/cryptocurrency-icons@d5c68edec1f5eaec59ac77ff2b48144679cebca1/svg/icon/dai.svg"
-                            alt="dai" />
-                        Dai <span class="text-muted">DAI</span>
-                    </h5>
-                </div>
-                <div class="modal-body py-0">
-                    <p id="dai">0x3a414eb23be9acbc3541ff9618873f1a5df309ee</p>
-                    <button type="button" class="btn btn-sm btn-primary w-100 mx-0 mb-2"
-                        onclick="copyToClipboard('dai')">
-                        Click to Copy Address
-                    </button>
+
+            <!-- Tether Card -->
+            <div class="col-md-6">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            <img src="https://cryptologos.cc/logos/tether-usdt-logo.svg?v=014" alt="Tether Logo" />
+                            Tether <span class="text-muted">USDT</span>
+                        </h5>
+                        <p class="card-text" id="usdt">0x686cAcdFBfd698Ff2c9501ed89418Ab9D49FFD17</p>
+                        <div class="qr-code">
+                            <img src="tether-qr.jpg" alt="Tether QR Code" width="128" height="128" />
+                        </div>
+                        <button class="btn btn-primary btn-sm copy-btn mt-3 d-block mx-auto"
+                            onclick="copyToClipboard('usdt')" aria-label="Copy Tether Address">
+                            <i class="bi bi-clipboard"></i> Copy Address
+                        </button>
+                    </div>
                 </div>
             </div>
-            <div class="modal-content rounded-6 shadow">
-                <div class="modal-header border-bottom-0">
-                    <h5 class="modal-title">
-                        <img src="https://cdn.jsdelivr.net/gh/atomiclabs/cryptocurrency-icons@d5c68edec1f5eaec59ac77ff2b48144679cebca1/svg/icon/aave.svg"
-                            alt="aave" />
-                        Aave <span class="text-muted">AAVE</span>
-                    </h5>
+
+            <!-- Litecoin Card -->
+            <div class="col-md-6">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            <img src="https://cryptologos.cc/logos/litecoin-ltc-logo.svg?v=014" alt="Litecoin Logo" />
+                            Litecoin <span class="text-muted">LTC</span>
+                        </h5>
+                        <p class="card-text" id="ltc">ltc1qn2vxd8d9nca4vendfgm7085pxnrgmqvw8qkdm5</p>
+                        <div class="qr-code">
+                            <img src="litecoin-qr.jpg" alt="Litecoin QR Code" width="128" height="128" />
+                        </div>
+                        <button class="btn btn-primary btn-sm copy-btn mt-3 d-block mx-auto"
+                            onclick="copyToClipboard('ltc')" aria-label="Copy Litecoin Address">
+                            <i class="bi bi-clipboard"></i> Copy Address
+                        </button>
+                    </div>
                 </div>
-                <div class="modal-body py-0">
-                    <p id="aave">0x3a414eb23be9acbc3541ff9618873f1a5df309ee</p>
-                    <button type="button" class="btn btn-sm btn-primary w-100 mx-0 mb-2"
-                        onclick="copyToClipboard('aave')">
-                        Click to Copy Address
-                    </button>
+            </div>
+
+        </div>
+    </div>
+
+    <!-- Toast for copy confirmation -->
+    <div class="toast-container">
+        <div class="toast align-items-center text-white bg-primary border-0" id="copyToast" role="alert"
+            aria-live="assertive" aria-atomic="true">
+            <div class="d-flex">
+                <div class="toast-body">
+                    Address copied to clipboard!
                 </div>
+                <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"
+                    aria-label="Close"></button>
             </div>
         </div>
     </div>
 
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
 
