--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         </h5>
                         <p class="card-text" id="bitcoin">bc1qg9jpeju99lydxh29069lvg7wpsajq5hkyqmpyt</p>
                         <div class="qr-code">
-                            <img src="bitcoin-qr.jpg" alt="Bitcoin QR Code" width="128" height="128" />
+                            <img src="images/bitcoin-qr.jpg" alt="Bitcoin QR Code" width="128" height="128" />
                         </div>
                         <button class="btn btn-primary btn-sm copy-btn mt-3 d-block mx-auto"
                             onclick="copyToClipboard('bitcoin')" aria-label="Copy Bitcoin Address">
@@ -55,7 +55,7 @@
                         </h5>
                         <p class="card-text" id="tron">TKunE2XMK62xX3GXR7ZNbhiHriY7YFMJHV</p>
                         <div class="qr-code">
-                            <img src="tron-qr.jpg" alt="TRON QR Code" width="128" height="128" />
+                            <img src="images/tron-qr.jpg" alt="TRON QR Code" width="128" height="128" />
                         </div>
                         <button class="btn btn-primary btn-sm copy-btn mt-3 d-block mx-auto"
                             onclick="copyToClipboard('tron')" aria-label="Copy TRON Address">
@@ -75,7 +75,7 @@
                         </h5>
                         <p class="card-text" id="eth">0x686cAcdFBfd698Ff2c9501ed89418Ab9D49FFD17</p>
                         <div class="qr-code">
-                            <img src="ethereum-qr.jpg" alt="Ethereum QR Code" width="128" height="128" />
+                            <img src="images/ethereum-qr.jpg" alt="Ethereum QR Code" width="128" height="128" />
                         </div>
                         <button class="btn btn-primary btn-sm copy-btn mt-3 d-block mx-auto"
                             onclick="copyToClipboard('eth')" aria-label="Copy Ethereum Address">
@@ -95,7 +95,7 @@
                         </h5>
                         <p class="card-text" id="doge">DAVHGhvzyaHhaCDbWZZjEZgKZLFnEw6wf4</p>
                         <div class="qr-code">
-                            <img src="dogecoin-qr.jpg" alt="Dogecoin QR Code" width="128" height="128" />
+                            <img src="images/dogecoin-qr.jpg" alt="Dogecoin QR Code" width="128" height="128" />
                         </div>
                         <button class="btn btn-primary btn-sm copy-btn mt-3 d-block mx-auto"
                             onclick="copyToClipboard('doge')" aria-label="Copy Dogecoin Address">
@@ -115,7 +115,7 @@
                         </h5>
                         <p class="card-text" id="usdt">0x686cAcdFBfd698Ff2c9501ed89418Ab9D49FFD17</p>
                         <div class="qr-code">
-                            <img src="tether-qr.jpg" alt="Tether QR Code" width="128" height="128" />
+                            <img src="images/tether-qr.jpg" alt="Tether QR Code" width="128" height="128" />
                         </div>
                         <button class="btn btn-primary btn-sm copy-btn mt-3 d-block mx-auto"
                             onclick="copyToClipboard('usdt')" aria-label="Copy Tether Address">
@@ -135,7 +135,7 @@
                         </h5>
                         <p class="card-text" id="ltc">ltc1qn2vxd8d9nca4vendfgm7085pxnrgmqvw8qkdm5</p>
                         <div class="qr-code">
-                            <img src="litecoin-qr.jpg" alt="Litecoin QR Code" width="128" height="128" />
+                            <img src="images/litecoin-qr.jpg" alt="Litecoin QR Code" width="128" height="128" />
                         </div>
                         <button class="btn btn-primary btn-sm copy-btn mt-3 d-block mx-auto"
                             onclick="copyToClipboard('ltc')" aria-label="Copy Litecoin Address">
